# ouroboros-network

./: .gitignore  .stack-to-nix.cache  cabal.project  default.nix  ouroboros-network.cabal  release.nix  stack.yaml
byron-proxy/src/lib/Ouroboros/Byron/Proxy/: DB.hs
demo-playground/: log-config-0.yaml  log-config-1.yaml  log-config-2.yaml  log-config-submission.yaml  play.sh  start-node.sh  submit-tx.sh
doc/: messages.cddl
io-sim-classes/: io-sim-classes.cabal
io-sim-classes/src/Control/Monad/Class/: MonadProbe.hs  MonadSay.hs
nix/: .stack-pkgs.nix  config.nix  haskell-overrides.nix  iohk-common.nix  iohk-nix-src.json  iohk-nix.json  nixpkgs-src.json  pkgs.nix
nix/.stack.nix/: clock.nix  io-sim-classes.nix  io-sim.nix  iohk-monitoring.nix  ouroboros-consensus.nix  ouroboros-network.nix  transformers.nix  typed-transitions.nix
ouroboros-bm/: .ghci  .gitignore  README.md  ouroboros-bm.cabal
ouroboros-bm/archive/: Rotator.lhs
ouroboros-bm/demo-gui/: GUIexample.hs
ouroboros-bm/doc/: README  README.md  Relationships.mdj
ouroboros-bm/doc/Cardano.BM/: 128021  128021.diagram  128021_21.d  128149.diagram  128149_21.d  128277.diagram  128405.diagram  134933  134933.diagram  134933_21.d  135061  135061_21.d  135189  135317.diagram  135445.diagram  135573_21.d  142101.diagram  148629_21.d  155157.diagram  161685.diagram  168213.diagram  21.session  Cardano.BM.prj
ouroboros-bm/example/: Main.hs
ouroboros-bm/src/: Code.lhs  literate.sh
ouroboros-bm/src/Cardano/BM/: Aggregation.hs  Aggregation.lhs  BaseTrace.lhs  Configuration.lhs  Controller.lhs  Counters.lhs  Data.lhs  Internal.hs  Log.hs  Monadic.lhs  MonadicObserver.lhs  STM.hs  STM.lhs  STMObserver.lhs  Scribes.hs  Setup.lhs  ToObject.lhs  Trace.hs  Trace.lhs  TraceConfig.hs
ouroboros-bm/src/Cardano/BM/Configuration/: Model.lhs
ouroboros-bm/src/Cardano/BM/Counters/: Common.lhs  Dummy.lhs  Linux.lhs
ouroboros-bm/src/Cardano/BM/Observer/: Monadic.lhs  STM.lhs
ouroboros-bm/src/Cardano/BM/Output/: Aggregation.lhs  Data.lhs  EKGView.lhs  Internal.hs  Internal.lhs  Katip.lhs  Log.lhs  Rotator.lhs  Scribes.hs  Switchboard.lhs
ouroboros-bm/src/Cardano/BM/Shell/: LoggingSetup.lhs
ouroboros-bm/test/: Main.hs  Main.lhs  literate.sh
ouroboros-bm/test/Cardano/BM/Arbitrary/: Aggregation.hs  Aggregation.lhs
ouroboros-bm/test/Cardano/BM/Test/: Aggregated.lhs  Aggregation.hs  Aggregation.lhs  STM.hs  STM.lhs  Trace.hs  Trace.lhs
ouroboros-consensus/: ouroboros-consensus.cabal
ouroboros-consensus/demo-playground/: CLI.hs  Logging.hs  Run.hs
ouroboros-consensus/demo-playground/Mock/: Protocol.hs  TxSubmission.hs
ouroboros-consensus/src/Ouroboros/Benchmark/: Microbenchmarks.md  STM.hs
ouroboros-consensus/src/Ouroboros/Consensus/: ChainSyncClient.hs  Node.hs
ouroboros-consensus/src/Ouroboros/Consensus/Ledger/: Abstract.hs  Byron.hs  Mock.hs
ouroboros-consensus/src/Ouroboros/Consensus/Protocol/: Abstract.hs  ModChainSel.hs  PBFT.hs  Praos.hs
ouroboros-consensus/src/Ouroboros/Consensus/Util/: Chain.hs  ChainFragment.hs  Orphans.hs
ouroboros-consensus/src/Ouroboros/Storage/ChainDB/: API.hs  Impl.hs  MemoryDB.hs  Types.hs
ouroboros-consensus/src/Ouroboros/Storage/FS/: Sim.hs
ouroboros-consensus/src/Ouroboros/Storage/FS/Sim/: FsTree.hs  STM.hs
ouroboros-consensus/src/Ouroboros/Util/: STM.hs
ouroboros-consensus/test-consensus/Test/Dynamic/: Network.hs
ouroboros-consensus/test-storage/Test/Ouroboros/: Storage.hs
ouroboros-network/: ouroboros-network.cabal
ouroboros-network/src/Ouroboros/Network/: BlockFetch.hs  ChainFragment.hs  ChainProducerState.hs  Codec.hs  MonadClass.hs  Mux.hs  Node.hs  NodeToClient.hs  NodeToNode.hs  Pipe.hs  Socket.hs
ouroboros-network/src/Ouroboros/Network/BlockFetch/: Decision.hs  State.hs
ouroboros-network/src/Ouroboros/Network/MonadClass/: MonadSay.hs
ouroboros-network/src/Ouroboros/Network/Mux/: Control.hs  Ingress.hs  Interface.hs  Types.hs
ouroboros-network/src/Ouroboros/Network/Protocol/ChainSync/: Examples.hs  Test.hs
ouroboros-network/test/: Main.hs
ouroboros-network/test-cddl/: Main.hs
ouroboros-network/test/Test/: ChainFragment.hs  ChainProducerState.hs  Pipe.hs  Socket.hs
ouroboros-network/test/Test/Ouroboros/Network/: Node.hs
src/Ouroboros/Network/: FetchLogic.hs  MuxWithDeltaQ.hs  Sim.hs
src/Ouroboros/Network/MonadClass/: MonadSTM.hs
typed-transitions/: typed-transitions.cabal
