name:                ouroboros-bm
version:             0.1.0.0
synopsis:            benchmarking framework
-- description:
license-file:        LICENSE
author:              Alexander Diemand, Andreas Triantafyllos
maintainer:
copyright:           2018 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Cardano.BM.Aggregation
                       Cardano.BM.BaseTrace
                       Cardano.BM.Controller
                       Cardano.BM.Counters
                       Cardano.BM.Counters.Dummy
                       Cardano.BM.Counters.Linux
                       Cardano.BM.Data
                       Cardano.BM.MonadicObserver
                       Cardano.BM.Setup
                       Cardano.BM.STMObserver
                       Cardano.BM.Trace
  other-modules:
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-extensions:    OverloadedStrings
  build-depends:       base,
                       aeson,
                       array,
                       bytestring,
                       clock,
                       containers,
                       contravariant,
                       filepath,
                       mtl,
                       stm,
                       text,
                       time,
                       time-units,
                       transformers,
            		       unix,
                       unordered-containers

  ghc-options:         -Wall
                       -fno-ignore-asserts

executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -O2 "-with-rtsopts=-T"
  other-modules:
  build-depends:       base,
                       ouroboros-bm,
                       async,
                       bytestring,
                       ekg,
                       ekg-core,
                       mtl,
                       random,
                       time,
                       unix
executable gui-example
  hs-source-dirs:      demo-gui
  main-is:             GUIexample.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -O2 "-with-rtsopts=-N"
  build-depends:       base,
                       ouroboros-bm,
                       threepenny-gui

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.lhs
  other-modules:       Cardano.BM.Test.Trace
                       Cardano.BM.Test.Aggregation
                       Cardano.BM.Test.STM
                       Cardano.BM.Arbitrary.Aggregation
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base,
                       ouroboros-bm,

                       array,
                       bytestring,
                       clock,
                       containers,
                       mtl,
                       process,
                       QuickCheck,
                       random,
                       semigroups,
                       stm,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       text,
                       transformers,
                       void
  ghc-options:         -Wall
